Should have fixed the issue where the mode instructions popup would sometimes cause safari to crash. This was due to the logic not fully working for having both a text div and a text div holder, and clicking on the text div holder would not properly provide the child text div's innerText, but only on safari

--- a/src/components/ModeInstructions.module.css
+++ b/src/components/ModeInstructions.module.css
@@ -35,6 +35,7 @@
 
 .modeDiv, .modeDivSelected{
     height: 8%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,9 +59,16 @@
     transition: 0.4s;
 }
 
-.modeText {
-    width: 90%;
-}
+/* .modeText {
+    width: 100%;
+    height: 8%;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    padding-left: 5%;
+    padding-right: 5%;
+    box-sizing: border-box;
+    margin: 0 !important;
+} */
 
 .contentDiv {
     width: 100%;
